app/globals.css
@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&display=block");

@import "tailwindcss";

.material-symbols-outlined {
  font-family: 'Material Symbols Outlined', sans-serif !important;
  font-weight: normal;
  font-style: normal;
  font-size: 24px;
  line-height: 1;
  letter-spacing: normal;
  text-transform: none;
  display: inline-block;
  white-space: nowrap;
  word-wrap: normal;
  direction: ltr;
  -webkit-font-feature-settings: 'liga';
  -webkit-font-smoothing: antialiased;
}

@custom-variant dark (&:where(.dark, .dark *));

:root {
  --background: #fbf8fa;
  --foreground: #1b1b1d;
}

:root.dark {
  --background: #1b1b1d;
  --foreground: #fbf8fa;
}

@theme inline {
  --color-surface-container-low: #f5f3f4;
  --color-surface-container-high: #eae7e9;
  --color-error-container: #ffdad6;
  --color-outline-variant: #c5c6cd;
  --color-background: #fbf8fa;
  --color-primary-fixed-dim: #bcc7de;
  --color-on-primary-container: #8590a6;
  --color-inverse-on-surface: #f3f0f2;
  --color-primary: #091426;
  --color-on-error: #ffffff;
  --color-secondary-fixed-dim: #c3c0ff;
  --color-on-tertiary: #ffffff;
  --color-surface-tint: #545f73;
  --color-surface-dim: #dcd9db;
  --color-tertiary-fixed: #fadfb8;
  --color-on-tertiary-fixed-variant: #564427;
  --color-on-tertiary-container: #a38c6a;
  --color-on-primary-fixed-variant: #3c475a;
  --color-primary-container: #1e293b;
  --color-on-secondary-fixed-variant: #3323cc;
  --color-on-primary: #ffffff;
  --color-on-error-container: #93000a;
  --color-surface-container-highest: #e4e2e3;
  --color-outline: #75777d;
  --color-on-secondary: #ffffff;
  --color-secondary: #4b41e1;
  --color-surface-container-lowest: #ffffff;
  --color-on-surface: #1b1b1d;
  --color-tertiary: #1e1200;
  --color-inverse-surface: #303032;
  --color-on-secondary-container: #ffffff;
  --color-secondary-fixed: #e2dfff;
  --color-on-primary-fixed: #111c2d;
  --color-surface-variant: #e4e2e3;
  --color-surface-bright: #fbf8fa;
  --color-on-secondary-fixed: #0f0069;
  --color-on-tertiary-fixed: #271902;
  --color-on-surface-variant: #45474c;
  --color-on-background: #1b1b1d;
  --color-error: #ba1a1a;
  --color-surface-container: #f0edef;
  --color-surface: #fbf8fa;
  --color-tertiary-fixed-dim: #ddc39d;
  --color-tertiary-container: #35260c;
  --color-secondary-container: #4f46e5;
  --color-inverse-primary: #bcc7de;
  --color-primary-fixed: #d8e3fb;

  --font-label-md: 600 12px/16px var(--font-jakarta);
  --font-body-md: 400 14px/20px var(--font-inter);
  --font-body-lg: 400 16px/24px var(--font-inter);
  --font-headline-md: 400 20px/28px var(--font-jakarta);
  --font-headline-lg-mobile: var(--font-jakarta), sans-serif;
  --font-display-lg: var(--font-jakarta), sans-serif;
  --font-headline-lg: 400 24px/32px var(--font-jakarta);
  --font-sans: var(--font-inter), sans-serif;
  --font-title-lg: 600 22px/28px var(--font-jakarta);
  --font-title-md: 600 16px/24px var(--font-jakarta);
  --font-label-lg: 600 14px/20px var(--font-jakarta);

  --spacing-margin-desktop: 40px;
  --spacing-unit: 8px;
  --spacing-gutter: 24px;
  --spacing-container-max: 1440px;
  --spacing-margin-mobile: 16px;
  --spacing-card-padding: 24px;
}

body {
  background-color: var(--background);
  color: var(--foreground);
}

